--- a/style.css
+++ b/style.css
@@ -14,6 +14,23 @@ h2 {
    
 }
 
+nav {
+  background-color: #AF3E52;
+}
+.slider {
+  width: 75%;
+  margin: auto;
+}
+.info{
+  width: 50%;
+  margin: 0%;
+}
+.carousel .carousel-item {
+  width: 50%;
+  height: 50%;
+}
+
+/* 
 #about-me {
   background-color: aqua;
 }
@@ -28,7 +45,7 @@ h2 {
 
 #contact {
   background-color: blueviolet;
-}
+} */
 
 /* this is just for a long scrollbar */
 div.space{
