--- a/style.css
+++ b/style.css
@@ -6,6 +6,21 @@ h2 {
   padding-top: 60px;
   height: 100vh;
 }
+@media (min-width: 992px){
+  hr {
+    width: 100%;
+    height: 5px;
+    background-color: #AF3E52;
+  }
+}
+
+
+@media (min-width: 640px) {
+  .portfolio-section {
+    padding-top: 70px;
+  }
+   
+}
 
 @media (min-width: 993px) {
   .portfolio-section {
@@ -13,10 +28,28 @@ h2 {
   }
    
 }
+.info_me{
+  margin-left: 20em;
+}
+.card-panel{
+  width: 380px;
+  margin-left: 20em;
+}
+.card{
+  margin: 0%;
+  height: 12em;
+  width: 15em;
+}
+.imgSkills{
+  width: 6em;
+  height: 6em;
+  margin: 3em;
+}
 
 nav {
   background-color: #AF3E52;
 }
+
 .slider {
   width: 75%;
   margin: auto;
@@ -24,30 +57,13 @@ nav {
 .info{
   width: 50%;
   margin: 0%;
+  padding: 0%;
 }
 .carousel .carousel-item {
   width: 50%;
   height: 50%;
 }
 
-/* 
-#about-me {
-  background-color: aqua;
-}
-
-#skills {
-  background-color: pink;
-}
-
-#projects {
-  background-color: greenyellow;
-}
-
-#contact {
-  background-color: blueviolet;
-} */
-
-/* this is just for a long scrollbar */
 div.space{
   margin-bottom:700px
 }
