--- a/style.css
+++ b/style.css
@@ -42,10 +42,17 @@ h2 {
   width: 380px;
   margin-left: 20em;
 }
-.card{
-  margin: 0%;
-  height: 12em;
-  width: 15em;
+
+.card {
+  position: relative;
+  margin: 0 0 2em;
+  background: #fff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
+  border-bottom: 1px solid #DFDFDF;
+  border-radius: 2px;
+  overflow: hidden;
+  -webkit-transform: translate3d(0px, 0px, 0px);
+  transition: all 0.3s ease-out;
 }
 .imgSkills{
   width: 6em;
