typografia y color en contacto

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h2 {
   word-wrap: break-word;
 }
 #contact {
-  background-color: #AF3E52;
+  background-color: #9A878B;
 }
 spam{
   font-family: 'Raleway', sans-serif;
