--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h2 {
   word-wrap: break-word;
 }
 #contact {
-  background-color: #9A878B;
+  background-color: #AF3E52;
 }
 spam{
   font-family: 'Raleway', sans-serif;
